--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.71.5"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
