--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "learning-react",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^4.0.3",
-    "prettier": "^1.5.3",
+  "dependencies": {    
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
@@ -27,6 +24,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "cross-env": "^5.0.5"
+    "cross-env": "^5.0.5",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.3",
+    "prettier": "^1.5.3"
   }
 }
