--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learning-react",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {    
+  "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
@@ -17,16 +17,21 @@
     ]
   },
   "scripts": {
+    "analyze": "source-map-explorer build/static/js/main.*",
     "precommit": "lint-staged",
-    "start": "cross-env NODE_PATH=src react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env HTTPS=true NODE_PATH=src react-scripts start",
+    "build": "cross-env NODE_PATH=src react-scripts build",
     "test": "cross-env NODE_PATH=src react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
     "cross-env": "^5.0.5",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
-    "prettier": "^1.5.3"
+    "prettier": "^1.5.3",
+    "react-styleguidist": "^6.0.20",
+    "source-map-explorer": "^1.4.0"
   }
 }
