--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
+    "flow": "flow",
     "precommit": "lint-staged",
     "start": "cross-env HTTPS=true NODE_PATH=src react-scripts start",
     "build": "cross-env NODE_PATH=src react-scripts build",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "cross-env": "^5.0.5",
+    "flow-bin": "^0.53.1",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.3",
     "prettier": "^1.5.3",
